поменяно название заголовка

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-    <title>You are the Apex Champion</title>
+    <title>крекер - художник</title>
   </head>
 
   <body>
@@ -12,16 +12,13 @@
       <div class="container">
       Контакты:
       vk.com/aiwalkerx - vkontakte
-      rawkfist2011@yandex.ru - yandex
-      sultandiscord@gmail.com - gmail
-      twitch.tv/fuzionGG - stream
     </div>
     </header>
 
     <section class="hero-image">
       <div class="container">
-      <h1 class="heading">пожилой fuzion</h1>
-      <p>old </p>
+      <h1 class="heading">ГАВНО РУЛИТ</h1>
+      <p></p>
     </div>
     </section>
 
