--- a/index.html
+++ b/index.html
@@ -11,24 +11,29 @@
     <header class="page-header">
       <div class="container">
       Контакты:
-      vk.com/aiwalkerx - vkontakte
+      <a href="vk.com/airwalkerx">vk.com/aiwalkerx - vkontakte</a>
+      <a href="maitlo:sultandiscord@gmail.com">sultandiscord@gmail.com - gmail</a>
+      <a href="tel:+79994400687">+79994400687 - phone</a>
     </div>
     </header>
 
     <section class="hero-image">
       <div class="container">
       <h1 class="heading">ГАВНО РУЛИТ</h1>
-      <p></p>
+      <p>джуниор пидарасик</p>
     </div>
     </section>
 
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="files/user.jpg" width="928" height="536" alt="селфи палка"
+      ></figure>
       <h3>Пара слов о себе</h3>
       <p>Зовут Никита. 24 года. Красноярск.</p>
       <h3>Чем могу быть полезен</h3>
       <p>Пока только учусь.</p>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
     </div>
     </section>
 
@@ -46,6 +51,8 @@
 
     <footer class="page-footer">
       <div class="container">
+        <a class="footer-email" href="mailto:sultandiscord@gmail.com">sultandiscord@gmail.com - gmail</a>
+        <a class="footer-phone" href="tel:+79994400687">+79994400687 - phone</a>
       podval
     </div>
     </footer>
